<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.staff.profile.ProfileStaffFragment">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="1382dp"
        android:layout_height="1105dp"
        android:src="@drawable/text_input_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="386dp"
        android:layout_height="573dp"
        android:src="@drawable/card_white"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lbl_imgProfile_user"
        android:layout_width="129dp"
        android:layout_height="133dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/lbl_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtNameUserProfile"
        android:textColor="#0E2F56"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/lbl_imgProfile_user" />

    <TextView
        android:id="@+id/lbl_name_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Department"
        android:textColor="#0E2F56"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/lbl_name_profile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Phone Number"
        android:textColor="#0E2F56"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/lbl_name_profile2" />

    <TextView
        android:id="@+id/lbl_roles_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRolesProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/lbl_name_profile" />

    <TextView
        android:id="@+id/lbl_email_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtEmailProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_roles_profile" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="384dp"
        android:layout_height="3dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/button_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_email_profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_selector"
        android:clickable="true"
        android:src="@drawable/ic_baseline_edit_24"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintStart_toEndOf="@+id/lbl_name_profile"
        app:layout_constraintTop_toBottomOf="@+id/lbl_imgProfile_user" />

    <TextView
        android:id="@+id/lbl_department_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/lbl_phone_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtPhoneProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/lbl_department_profile" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="LOGOUT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_faqs_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@drawable/information"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

</androidx.constraintlayout.widget.ConstraintLayout>